# timmer

./: AppIcon.icns  Cargo.toml  build.rs  convert_ico.py  package_brew.sh  package_mac.sh  print_opts.rs  test_clear.rs  test_opts.rs
.cargo/: config.toml
.github/workflows/: build.yml
src/: app.rs  audio.rs  bin_test_audio.rs  config.rs  control_panel.rs  font_scanner.rs  main.rs  overlay.rs  platform_macos.rs  platform_windows.rs  style.rs  test_macos.rs  timer.rs
