[package]
name = "presentation-timer"
version = "1.0.0"
edition = "2021"
description = "PPT 프레젠테이션 오버레이 타이머"

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
rodio = "0.22.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSWindow",
    "NSView",
    "NSColor",
    "NSScreen",
    "NSRunningApplication",
    "NSApplication",
    "NSGraphics",
    "NSPanel",
    "NSWindowScripting",
] }
objc2-foundation = { version = "0.3", features = [
    "NSThread",
    "NSString",
    "NSArray",
    "NSValue",
    "NSGeometry",
] }
raw-window-handle = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true

[build-dependencies]
embed-resource = "3.0.9"
